--- a/Flask/static/styles.css
+++ b/Flask/static/styles.css
@@ -1,6 +1,7 @@
 body {
     font-family: Arial, sans-serif;
     background-color: #f0f0f0;
+    transition: background-color 0.3s, color 0.3s;
 }
 
 .container {
@@ -10,6 +11,7 @@ body {
     background-color: #fff;
     border-radius: 8px;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+    transition: background-color 0.3s, color 0.3s;
 }
 
 .todos {
@@ -47,7 +49,7 @@ body {
     cursor: pointer;
 }
 
-.clear-todo-form button {
+button {
     padding: 10px 20px;
     font-size: 16px;
     background-color: #eeff00;
@@ -57,6 +59,24 @@ body {
     cursor: pointer;
 }
 
+button:hover {
+    background-color: orange;
+}
+
 .add-todo-form button:hover {
     background-color: #0056b3;
+}
+
+body.dark-mode {
+    background-color: #121212;
+    color: #e0e0e0;
+}
+
+.container.dark-mode {
+    background-color: #1e1e1e;
+    color: #e0e0e0;
+}
+
+.todos li.dark-mode {
+    background-color: #333;
 }
