--- a/Flask/templates/index.html
+++ b/Flask/templates/index.html
@@ -9,6 +9,7 @@
 <body>
     <div class="container">
         <h1>Things Undone</h1>
+        <button id="toggle-dark-mode">Dark Mode</button>
         <ol class="todos">
             {% for todo in todos %}
             <li>
@@ -28,10 +29,10 @@
             <input type="text" name="content" placeholder="Enter new task" required>
             <button type="submit">Do the Thing!</button>
         </form>
-        <form action="{{ url_for('add_todo') }}" method="POST" class="clear-todo-form">
-            <input type="text" name="content" placeholder="Kill the whole list" required>
-            <button type="submit">DELETE ALL!</button>
+        <form action="/delete_all" method="POST" style="margin-top: 20px;">
+            <button type="submit">Delete All!</button>
         </form>
     </div>
+    <script src="{{ url_for('static', filename='script.js') }}"></script>
 </body>
 </html>
